<resources>
    <string name="app_name">Jabar Mengaji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jadwal">Jadwal</string>
    <string name="al_quran">Al-Qur\'an</string>
    <string name="masjid">Masjid</string>
    <string name="doa">Doa</string>
    <string name="komunitas">Komunitas</string>
    <string name="default_degrees">0°</string>
    <string name="compass">Compass</string>
    <string name="lokasi">Lokasi</string>
    <string name="information_qibla">Jauhkan perangkat dari objek yang berbahan besi atau logam, agar lebih akurat</string>
    <string name="back">Back</string>
    <string name="arah_kiblat">Arah Kiblat</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="default_date">9 Agustus 2025</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_dzuhur_sudah_lewat">Waktu Dzuhur Sudah Lewat</string>
    <string name="_32_menit_yang_lalu">± 32 menit yang lalu</string>
    <string name="time_etc">± ...</string>
    <string name="kiblat">Kiblat</string>
    <string name="imsak">Imsak</string>
    <string name="subuh">Subuh</string>
    <string name="terbit">Terbit</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="_04_32">04:32</string>
    <string name="_04_42">04:42</string>
    <string name="_05_56">05:56</string>
    <string name="_11_59">11:59</string>
    <string name="_15_19">15:19</string>
    <string name="_17_54">17:54</string>
    <string name="_19_05">19:05</string>
    <string name="waktu_etc">Waktu ...</string>
    <string name="search">Search...</string>
    <string name="cari">Cari...</string>
    <string name="detail_doa">Detail Doa</string>
    <string name="arabic_default">\"بِاسْمِكَ رَبِّيْ وَضَعْتُ جَنْبِيْ، وَبِكَ أَرْفَعُهُ، إِنْ أَمْسَكْتَ نَفْسِيْ فَارْحَمْهَا، وَإِنْ أَرْسَلْتَهَا فَاحْفَظْهَا بِمَا تَحْفَظُ بِهِ عِبَادَكَ الصَّالِحِيْن</string>
    <string name="latin_default">Bismika robbii wa dho\'tu janbii, wa bika arfa\'uhu, in amsakta nafsii farhamhaa, wa in arsaltahaa fahfazhhaa bimaa tahfazhu bihi \'ibaadakash-sholihiin.</string>
    <string name="translation_default">Dengan nama Engkau, wahai Tuhanku, aku meletakkan lambungku. Dan dengan namaMu pula aku bangun daripadanya. Apabila Engkau menahan rohku (mati), maka berilah rahmat padanya. Tapi apabila Engkau melepaskannya, maka peliharalah, sebagaimana Engkau memelihara hamba-hambaMu yang shalih.</string>
    <string name="about_default">HR. Al-Bukhari 11/126, Muslim 4/2084.\\n\\\"Apabila seseorang di antara kalian bangkit dari tempat tidurnya kemudian ingin kembali lagi, hendaknya ia mengibaskan ujung kainnya 3x, dan menyebut nama Allah, karena ia tidak tahu apa yang ditinggalkannya di atas tempat tidur setelah ia bangkit. Apabila ia ingin berbaring, maka hendaknya ia membaca: (doa di atas).\\\"\\n\\n\\nSumber: Hisnul Muslim.</string>
    <string name="detail_surah">Detail Surat</string>
    <string name="bismillah">ِسْــــــــــــــــــمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ</string>
    <string name="play_audio">Play Audio</string>
    <string name="community_image">Community Image</string>
    <string name="masjid_terdekat">Masjid Terdekat</string>
    <string name="skip">SKIP</string>
    <string name="back_2">BACK</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>

    <string name="title_walkthrough_1">Jadwal Sholat Akurat</string>
    <string name="title_walkthrough_2">Arah Kiblat Tepat</string>
    <string name="title_walkthrough_3">Doa &amp; Al-Qur’an Digital</string>
    <string name="desc_walkthrough_1">Pantau waktu sholat harian sesuai lokasi Anda.</string>
    <string name="desc_walkthrough_2">Temukan arah kiblat dengan akurasi tinggi di mana pun Anda</string>
    <string name="desc_walkthrough_3">Baca doa-doa pilihan dan Al-Qur’an lengkap di genggaman Anda.</string>
    <string name="image">Image</string>
</resources>