<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="50dp"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/sliderImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:contentDescription="@string/image"
        android:src="@drawable/img_mosque"/>

    <TextView
        android:id="@+id/sliderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_walkthrough_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sliderDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_walkthrough_1"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</LinearLayout>