<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailDuaFragment"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/toolbarDetailDua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_600"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/tvTitleQibla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_doa"
            android:fontFamily="@font/roboto_bold"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDuaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/detail_doa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetailDua" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDuaTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvDuaArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_quran"
                android:gravity="start"
                android:text="@string/arabic_default"
                android:lineSpacingExtra="12dp"
                android:textColor="@color/text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvDuaLatin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium_italic"
                android:text="@string/latin_default"
                android:textColor="@color/green_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDuaTranslation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/translation_default"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                tools:targetApi="26" />

            <TextView
                android:id="@+id/tvDuaAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_search_bar"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                android:text="@string/about_default"
                android:padding="12dp"
                android:textColor="@color/gray_600"
                android:textSize="12sp"
                tools:targetApi="26" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>